RESOLVED FIXED47846
elementCannotHaveEndTag should be a member function of MarkupAccumulator
https://bugs.webkit.org/show_bug.cgi?id=47846
Summary elementCannotHaveEndTag should be a member function of MarkupAccumulator
Ryosuke Niwa
Reported 2010-10-18 14:08:15 PDT
Since serializeNodes have been moved into MarkupAccumulator, we should also move elementCannotHaveEndTag into MarkupAccumulator.
Attachments
cleanup (3.83 KB, patch)
2010-10-18 14:11 PDT, Ryosuke Niwa
abarth: review+
Ryosuke Niwa
Comment 1 2010-10-18 14:11:24 PDT
Created attachment 71080 [details] cleanup
Adam Barth
Comment 2 2010-10-18 14:15:47 PDT
Comment on attachment 71080 [details] cleanup like
Ryosuke Niwa
Comment 3 2010-10-18 14:42:53 PDT
Note You need to log in before you can comment on or make changes to this bug.