2010-10-18  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Adam Barth.

        elementCannotHaveEndTag should be a member function of MarkupAccumulator
        https://bugs.webkit.org/show_bug.cgi?id=47846

        Moved elementCannotHaveEndTag into MarkupAccumulator.

        No new tests are added since this is a cleanup.

        * editing/MarkupAccumulator.cpp:
        (WebCore::MarkupAccumulator::elementCannotHaveEndTag): Added.
        * editing/MarkupAccumulator.h: Added MarkupAccumulator::elementCannotHaveEndTag.
        * editing/markup.cpp: Removed elementCannotHaveEndTag.
        * editing/markup.h: Removed elementCannotHaveEndTag.


Canonical link: https://commits.webkit.org/60560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69994 268f45cc-cd09-0410-ab3c-d52691b4dbfc